--- a/style.css
+++ b/style.css
@@ -56,11 +56,10 @@ canvas {
 }
 
 .fieldwrapper {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   width: 80%;
-  justify-content: space-between;
-  align-items: center;
+  max-width: 600px;
   padding: 2rem;
 }
 
@@ -110,4 +109,35 @@ canvas {
   min-width: 380;
   max-width: 600px;
   margin: 0 auto;
+}
+
+.btn-holder {
+  width: 50px;
+  height: 26px;
+  border-radius: 18px;
+  background-color: #f7d6a3;
+  display: flex;
+  align-items: center;
+  padding-left: 5px;
+  padding-right: 5px;
+  cursor: pointer;
+
+  .btn-circle {
+    background-color: #6b5e8a;
+    transform: translateX(0px);
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    transition: 300ms;
+  }
+
+  .active {
+    background-color: rgb(218, 114, 80);
+    transform: translateX(30px);
+    transition: 300ms;
+  }
+
+  .checkbox {
+    display: none;
+  }
 }
